@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/webrat
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/webrat/ChangeLog,v 1.5 2009/12/06 08:06:21 graaff Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/webrat/ChangeLog,v 1.6 2010/01/18 17:17:15 flameeyes Exp $
+
+*webrat-0.7.0 (18 Jan 2010)
+
+  18 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
+  +webrat-0.7.0.ebuild:
+  Version bump, port to ruby-fakegem, add tests.
 
 *webrat-0.6.0 (06 Dec 2009)
 
